Saturday, 20th December, Ron Steinke <rsteinke@w-link.net>

	* Don't need Avatar::GotEntity, World::Entered does
	  the same thing.

Saturday, 20th December, Ron Steinke <rsteinke@w-link.net>

	* Added a GotEntity signal to Avatar, so we can connect
	  callbacks to the character's entity when it arrives.

Friday, 19th December, Al Riddoch <alriddoch@zepler.org>

	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.

Thursday, 19th December, James Turner <james@worldforge.org>

    * Remove ancient socket references from Eris/Types.h - long
      since deprecated in favour of skstream

Monday, 8th December, James Turner, <james@worldforge.org>

    * Fix a warning on Mingw32, due to me using -1 in BaseConnection,
      when I should have used the constant supplied by skstream.

Friday, 5th December, Al Riddoch <alriddoch@zepler.org>

	* Fix LDADD for testEris so it works right.

Friday, 5th December, Al Riddoch <alriddoch@zepler.org>

	* Fix test/Makefile.am so the tests build but don't run.

Tuesday, 2nd December, Al Riddoch <alriddoch@zepler.org>

	* Supress unknown pragme warnings, and add canonical macros.

Thursday, 27th November, James Turner <james@worldforge.org>

    * Apply Ron's patch for transforming WFMath objects
      based on an entity's pos and orientation.

Monday, 24th November, James Turner <james@worldforge.org>
    * Add accessor for Person objects directly on Room.
    
Monday, 24th November, Al Riddoch <alriddoch@zepler.org>

	* Eris/Avatar.cpp: Fix all uses of send() to pass a reference
	  rather than a pointer. Why did this compile?

Sunday, 23nd November, Ron Steinke <rsteinke@w-link.net>

	* Added take(), touch(), say(), move(), and place()
	  methods to Avatar, to complement the existing drop()
	  method.

Sunday, 2nd November, Ron Steinke <rsteinke@w-link.net>

	* Replaced Time::Stamp class with a typedef to
	  WFMath::TimeStamp (which was originally a copy
	  of Time::Stamp).
